--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <p>home works!</p>
 <button [routerLink]="'usuarios'">BOTONASO</button><br>
-<a href="/usuarios">LINK 2</a>
+<a href="/#/usuarios">LINK 2</a>
