--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
 <p>home works!</p>
 <button [routerLink]="'usuarios'">BOTONASO</button><br>
-<a href="/#/usuarios">LINK 2</a>
+<a href="https://contabilidad.store/#/usuarios">LINK 2</a>
+<!-- <a href="http://localhost:4200/#/usuarios">LINK 2</a> -->
