--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,4 +3,4 @@
 <!-- <a class="main-item" (click)="onNavigate()">LINK 3</a> -->
 <a href="https://prueba.contabilidad.store/#/usuarios" target="_blank" rel="nofollow noreferer noopener">LINK 2</a>
 <!-- <a href="http://localhost:4200/#/usuarios">LINK 2</a> -->
-<!-- <a href="https://contabilidad.store/#/usuarios" target="_blank" rel="nofollow noreferer noopener">LINK 4</a> -->
+<a href="https://contabilidad.store/#/usuarios" target="_blank" rel="nofollow noreferer noopener">LINK 4</a>
