--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,8 @@
 <p>home works!</p>
 <button [routerLink]="'usuarios'">BOTONASO</button><br>
 <!-- <a class="main-item" (click)="onNavigate()">LINK 3</a> -->
-<a href="https://prueba.contabilidad.store/#/usuarios" target="_blank" rel="nofollow noreferer noopener">LINK 2</a>
+<a href="https://prueba.contabilidad.store/#/usuarios" target="_blank" rel="nofollow noreferer noopener">LINK 2</a><br>
 <!-- <a href="http://localhost:4200/#/usuarios">LINK 2</a> -->
-<a href="https://contabilidad.store/#/usuarios" target="_blank" rel="nofollow noreferer noopener">LINK 4</a>
+<a href="https://contabilidad.store/#/usuarios" target="_blank" rel="nofollow noreferer noopener">LINK 4</a><br>
+<a href="/usuarios" target="_blank" rel="nofollow noreferer noopener">LINK 5</a><br>
+<a routerLink="/usuarios">LINK 6</a>
