--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,4 +5,9 @@
 <!-- <a href="http://localhost:4200/#/usuarios">LINK 2</a> -->
 <a href="https://contabilidad.store/#/usuarios" target="_blank" rel="nofollow noreferer noopener">LINK 4</a><br>
 <a href="/usuarios" target="_blank" rel="nofollow noreferer noopener">LINK 5</a><br>
-<a routerLink="/usuarios">LINK 6</a>
+<a routerLink="/usuarios">LINK 6</a><br><br><br>
+
+<button (click)="onNavigate()">BOTON 1</button>
+<a class="main-item" (click)="onNavigate()">LINK 7</a>
+<a href="https://luishuapayas.com/dashboard/index.html" target="_blank" rel="nofollow noreferer noopener">LINK 8</a><br>
+<a href="https://luishuapayas.com/dashboard/index.html?key1=valor1&key2=valor2" target="_blank" rel="nofollow noreferer noopener">LINK 9</a><br>
