--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 <a href="/usuarios" target="_blank" rel="nofollow noreferer noopener">LINK 5</a><br>
 <a routerLink="/usuarios">LINK 6</a><br><br><br>
 
-<button (click)="onNavigate()">BOTON 1</button>
-<a class="main-item" (click)="onNavigate()">LINK 7</a>
+<button (click)="onNavigate()">BOTON 1</button><br>
+<a class="main-item" (click)="onNavigate()">LINK 7</a><br>
 <a href="https://luishuapayas.com/dashboard/index.html" target="_blank" rel="nofollow noreferer noopener">LINK 8</a><br>
 <a href="https://luishuapayas.com/dashboard/index.html?key1=valor1&key2=valor2" target="_blank" rel="nofollow noreferer noopener">LINK 9</a><br>
